[project]
name = "pawrelay-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "손채은",email = "sonchaeeun065@gmail.com"}
]
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn[standard] (>=0.44.0,<0.45.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-multipart (>=0.0.24,<0.0.25)",
    "geoalchemy2 (>=0.18.4,<0.19.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
